# advent-of-code

./: .gitignore
2022/: README.md
2022/1/: README.md  main.go
2022/2/: README.md  go.mod  main.go
2022/2/cmd/main/: main.go
2022/2/internal/puzzle/: first.go  second.go
2022/2/pkg/utils/: utils.go
2022/3/: README.md  go.mod
2022/3/cmd/main/: main.go
2022/3/internal/puzzle/: first.go
2022/3/pkg/scanner/: scanner.go
2023/: README.md  pyproject.toml
2023/advenimientodelcodigo/dia1/: README.md  __init__.py  _parte_dos.py  _parte_uno.py  parte_dos.py  parte_uno.py
2023/advenimientodelcodigo/dia2/: README.md  parte_uno.py
2023/pruebas/: test_dia1.py  test_dia2.py
2023/tests/: test_dia1.py
